force-app/main/default/objects/ppmail__Mail_Sending__c.object
<CustomObject>
    <description>Represents a single email-related task to be handled</description>
    <fields>
        <fullName>ppmail__BCC_Emails__c</fullName>
        <label>BCC Emails</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__BCC_Names__c</fullName>
        <label>BCC Names</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__CC_Emails__c</fullName>
        <label>CC Emails</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__CC_Names__c</fullName>
        <label>CC Names</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__Count_Batches_Failed__c</fullName>
        <label>Count Batches Failed</label>
        <summaryFilterItems>
            <field>ppmail__Mail_Sending_Batch__c.ppmail__Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>ppmail__Mail_Sending_Batch__c.ppmail__Mail_Sending__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ppmail__Count_Batches_Queued__c</fullName>
        <label>Count Batches Queued</label>
        <summaryFilterItems>
            <field>ppmail__Mail_Sending_Batch__c.ppmail__Status__c</field>
            <operation>equals</operation>
            <value>Queued</value>
        </summaryFilterItems>
        <summaryForeignKey>ppmail__Mail_Sending_Batch__c.ppmail__Mail_Sending__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ppmail__Count_Batches_Sending__c</fullName>
        <label>Count Batches Sending</label>
        <summaryFilterItems>
            <field>ppmail__Mail_Sending_Batch__c.ppmail__Status__c</field>
            <operation>equals</operation>
            <value>Sending</value>
        </summaryFilterItems>
        <summaryForeignKey>ppmail__Mail_Sending_Batch__c.ppmail__Mail_Sending__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ppmail__Count_Batches_Sent__c</fullName>
        <label>Count Batches Sent</label>
        <summaryFilterItems>
            <field>ppmail__Mail_Sending_Batch__c.ppmail__Status__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </summaryFilterItems>
        <summaryForeignKey>ppmail__Mail_Sending_Batch__c.ppmail__Mail_Sending__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ppmail__Count_Batches_Total__c</fullName>
        <label>Count Batches Total</label>
        <summaryForeignKey>ppmail__Mail_Sending_Batch__c.ppmail__Mail_Sending__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ppmail__From_Email__c</fullName>
        <label>From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ppmail__From_Name__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ppmail__Mail_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mail Content</label>
        <referenceTo>ppmail__Mail_Content__c</referenceTo>
        <relationshipLabel>Mail Sendings</relationshipLabel>
        <relationshipName>Mail_Sendings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ppmail__Mail_Content_is_Template__c</fullName>
        <formula>ppmail__Mail_Content__r.ppmail__Template__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mail Content is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ppmail__Mail_Service__c</fullName>
        <label>Mail Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ppmail__Mail_Service</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ppmail__Related_To_ID__c</fullName>
        <label>Related To ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ppmail__Reply_To_Email__c</fullName>
        <label>Reply To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ppmail__Reply_To_Name__c</fullName>
        <label>Reply To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ppmail__Send_After__c</fullName>
        <label>Send After</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ppmail__Separate_Email_for_Each_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Separate Email for Each Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ppmail__Status_Message__c</fullName>
        <label>Status Message</label>
        <length>4048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Prepared</fullName>
                </value>
                <value>
                    <fullName>Sending</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ppmail__Target_IDs__c</fullName>
        <label>Target IDs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__Target_List_View__c</fullName>
        <label>Target List View</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ppmail__To_Emails__c</fullName>
        <label>To Emails</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__To_Names__c</fullName>
        <label>To Names</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Mail Sending</label>
    <listViews>
        <fullName>ppmail__All_Mail_Sendings</fullName>
        <columns>NAME</columns>
        <columns>ppmail__From_Email__c</columns>
        <columns>ppmail__Mail_Content__c</columns>
        <columns>ppmail__Status__c</columns>
        <columns>ppmail__Count_Batches_Total__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Mail Sendings</label>
    </listViews>
    <nameField>
        <displayFormat>MS-{000000}</displayFormat>
        <label>Mail Sending Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mail Sendings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>